# rbinilspy

./: .gitignore  Cargo.toml  LICENSE  README.md  test_args.sh
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
crates/rbm-core/: Cargo.toml
crates/rbm-core/src/: config.rs  env.rs  error.rs  lib.rs  output_guard.rs  paths.rs
crates/rbm-server/: Cargo.toml
crates/rbm-server/src/: lib.rs  main.rs  support.rs
ilspy-worker/: Program.cs
